更改为阿里云下载地址

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
     var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
     if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){
-        window.location.href="https://pcs.baidu.com/rest/2.0/pcs/file?method=download&app_id=250528&path=%2FGouShare%2Fgoushare_v1.0.0_7_internal_release_201906191357.apk";
+        window.location.href="https://goushare.oss-cn-shenzhen.aliyuncs.com/goushare_v1.0.0_7_internal_release_201906191357.apk";
     } else {
-        window.location.href="https://pcs.baidu.com/rest/2.0/pcs/file?method=download&app_id=250528&path=%2FGouShare%2Fgoushare_v1.0.0_7_internal_release_201906191357.apk";
+        window.location.href="https://goushare.oss-cn-shenzhen.aliyuncs.com/goushare_v1.0.0_7_internal_release_201906191357.apk";
     }
 }
 browserRedirect();
